--- a/app/src/main/res/layout/fragment_financeiro.xml
+++ b/app/src/main/res/layout/fragment_financeiro.xml
@@ -1,11 +1,17 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.iasmimc.myapplication.FinanceiroFragment">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="Em Desenvolvimento"
-        android:gravity="center"/>
+    tools:context="com.example.iasmimc.myapplication.ListConvActivity$PlaceholderFragment">
 
-</FrameLayout>
+    <ListView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/listviewfinanceira"
+        android:focusable="true"
+        android:listSelector="@drawable/list_selector"
+        >
+
+    </ListView>
+</RelativeLayout>
