--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -11,5 +11,6 @@
         android:orderInCategory="100" app:showAsAction="never" />
     <item android:id="@+id/action_conf" android:title="@string/title_activity_configuracao"
         android:orderInCategory="100" app:showAsAction="never" />
-
+    <item android:id="@+id/action_divida" android:title="@string/title_divida"
+        android:orderInCategory="100" app:showAsAction="never" />
 </menu>
