--- a/app/src/main/res/layout/fragment_financeiro.xml
+++ b/app/src/main/res/layout/fragment_financeiro.xml
@@ -1,17 +1,22 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-
-    tools:context="com.example.iasmimc.myapplication.ListConvActivity$PlaceholderFragment">
-
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <ListView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/listviewfinanceira"
-        android:focusable="true"
-        android:listSelector="@drawable/list_selector"
-        >
+        android:layout_weight="2" >
 
     </ListView>
+    <com.example.iasmimc.myapplication.FloatingActionButton
+        android:id="@+id/icon_mais_fin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        fab:fab_icon="@drawable/ic_action_add"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="16dp"
+        android:layout_alignParentRight="true"/>
+
 </RelativeLayout>
