--- a/app/src/main/res/menu/menu_add_debito.xml
+++ b/app/src/main/res/menu/menu_add_debito.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.iasmimc.myapplication.AddDebito">
+    tools:context="com.example.iasmimc.myapplication.Screen.AddDebito">
     <item android:id="@+id/action_settings" android:title="@string/action_save"
         android:icon="@drawable/ic_action_save"
         android:orderInCategory="100" app:showAsAction="always" />
