--- a/app/src/main/res/values-v21/color.xml
+++ b/app/src/main/res/values-v21/color.xml
@@ -51,7 +51,14 @@
     <color name="secondaryHeaderColor">#BF1B2B</color>
     <color name="shadow_gray">#B2B2B2</color>
     <color name="splitsColor">#F16430</color>
-    <color name="white">#FFF</color>
-    <color name="white_transparent">#7FFFFFFF</color>
-	<color name="account_group_stroke">#717073</color>
+
+    <color name="black_semi_transparent">#B2000000</color>
+    <color name="background">#e5e5e5</color>
+    <color name="half_black">#808080</color>
+    <color name="white">#fafafa</color>
+    <color name="white_pressed">#f1f1f1</color>
+    <color name="pink">#e91e63</color>
+    <color name="pink_pressed">#ec407a</color>
+    <color name="blue_semi_transparent">#805677fc</color>
+    <color name="blue_semi_transparent_pressed">#80738ffe</color>
 </resources>
