--- a/app/src/main/res/layout/legenda.xml
+++ b/app/src/main/res/layout/legenda.xml
@@ -1,20 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="?android:attr/listPreferredItemHeight"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="horizontal"
     android:padding="6dip">
 
-    <TextView
+    <ImageView
         android:id="@+id/retangulo"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content" />
-
+        android:layout_width="8dp"
+        android:layout_height="wrap_content"
+        android:src="@drawable/gift"
+        android:layout_weight="0.2"
+        />
     <TextView
         android:id="@+id/textlegenda"
-        android:layout_width="fill_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="7pt" />
-
+        android:textSize="7pt"
+        android:layout_weight="2"/>
+    <TextView
+        android:id="@+id/status_legenda"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.5"
+        />
 
 </LinearLayout>
