--- a/app/src/main/res/layout/activity_add_debito.xml
+++ b/app/src/main/res/layout/activity_add_debito.xml
@@ -1,30 +1,78 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    >
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Nome da Dívida"/>
     <EditText
-        android:text="Nome da Divida"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/nomeparcela"
         android:textSize="10pt"
         android:padding="16dp"
         />
-    <ListView
-        android:paddingTop="64dp"
-        android:layout_width="wrap_content"
+    <TextView
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/listadividas">
-
-    </ListView>
-    <com.example.iasmimc.myapplication.FloatingActionButton
-        android:id="@+id/pink_icon"
-        android:layout_width="wrap_content"
+        android:text="Valor da Parcela"/>
+    <EditText
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        fab:fab_icon="@drawable/ic_action_add"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="16dp"
-        android:layout_alignParentRight="true"/>
+        android:id="@+id/valorparcela"
+        android:textSize="10pt"
+        android:padding="16dp"
+        android:inputType="numberDecimal"
+        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Quantidades de Parcelas"
+            android:layout_weight="0.5"/>
 
-</RelativeLayout>
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Parcelas Pagas"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+        <EditText
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:id="@+id/vezes"
+            android:textSize="10pt"
+            android:padding="16dp"
+            android:layout_weight="1"
+            />
+
+        <EditText
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:id="@+id/pagas"
+            android:textSize="10pt"
+            android:padding="16dp"
+            android:layout_weight="1"
+            />
+    </LinearLayout>
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textColor="@color/transparent"
+        android:id="@+id/id_parcela"/>
+
+</LinearLayout>
