--- a/app/src/main/res/layout/activity_convidados_add.xml
+++ b/app/src/main/res/layout/activity_convidados_add.xml
@@ -7,21 +7,32 @@
     tools:context="com.example.iasmimc.myapplication.Screen.ConvidadosAdd"
     android:orientation="vertical">
 
- <EditText
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Nome no Convite"
+        />
+    <EditText
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
-     android:hint="Nome no Convite"
      android:id="@+id/nomeConv"/>
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Números de Convidados"
+        />
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <EditText
-            android:inputType="number"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:hint="Quantidade"
-            android:id="@+id/qtdeConv"/>
+    <EditText
+        android:inputType="number"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:hint="Quantidade"
+        android:text="0"
+        android:id="@+id/qtdeConv"/>
+
         <ImageButton
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
@@ -39,5 +50,10 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/spinner1" />
-
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text=""
+    android:id="@+id/id_convidado"
+    android:textColor="@color/transparent"/>
 </LinearLayout>
