--- a/app/src/main/res/layout/convidado.xml
+++ b/app/src/main/res/layout/convidado.xml
@@ -45,10 +45,12 @@
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_action_dontlike"/>
                <TextView
-                   android:id="@+id/id"
+                   android:id="@+id/id_convidado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
+                   android:text=""
+                   android:textColor="@color/budgetColorRedBackground"
                    />
             </TableRow>
 
