--- a/app/src/main/res/layout/financeiro.xml
+++ b/app/src/main/res/layout/financeiro.xml
@@ -11,12 +11,12 @@
         android:layout_height="fill_parent">
         <TextView
             android:id="@+id/nomeDebito"
-            android:textSize="7pt"
+            android:textSize="9pt"
             android:textColor="@color/accent_material_light"
             android:layout_width="fill_parent"
-            android:layout_height="0dip"
+            android:layout_height="fill_parent"
             android:layout_weight="1"
-            android:text=""
+            android:text="Nome do Debito"
             android:gravity="center_vertical"
             />
         <TableLayout
@@ -27,31 +27,67 @@
                     android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
                     android:id="@+id/qtde"
-                    android:textSize="12pt"
+                    android:textSize="8pt"
                     android:text="2"/>
-                <ImageView
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
-                    android:paddingRight="15dp"
-                    android:src="@drawable/currency"/>
-                <ImageView
-                    android:id="@+id/status"
+                    android:textSize="8pt"
+                    android:text="  vez(es)"/>
+                <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_action_tick"
-                    />
+                    android:layout_height="fill_parent"
+                    android:textSize="8pt"
+                    android:text="               "/>
+
             </TableRow>
 
         </TableLayout>
 
+
     </LinearLayout>
+<TableLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
     <TextView
         android:id="@+id/valor"
         android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
         android:text="125,00"
         android:textSize="12pt"
         android:textColor="@color/budgetColorGreenBackground"
 
         />
+    <TableRow>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="8pt"
+        android:id="@+id/pagas"
+        android:text="2"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:textSize="8pt"
+        android:text="/"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/totalpagas"
+        android:textSize="8pt"
+        android:text="2"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:textSize="8pt"
+        android:text="   pagas"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:textSize="8pt"
+        android:text="-1"
+        android:textColor="@color/transparent"
+        android:id="@+id/id_parcela"/>
+    </TableRow>
+</TableLayout>
 </LinearLayout>
