--- a/app/src/main/res/menu/menu_convidados_add.xml
+++ b/app/src/main/res/menu/menu_convidados_add.xml
@@ -9,7 +9,6 @@
     <item android:id="@+id/action_search"
         android:icon="@drawable/ic_action_add_s"
         android:title="@string/action_settings"
+        android:visible="false"
         app:showAsAction="ifRoom" />
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
 </menu>
