--- a/app/src/main/res/layout/financeiro.xml
+++ b/app/src/main/res/layout/financeiro.xml
@@ -55,10 +55,19 @@
         android:layout_height="wrap_content"
         android:text="125,00"
         android:textSize="12pt"
+        android:textAlignment="gravity"
+        android:gravity="right"
         android:textColor="@color/budgetColorGreenBackground"
 
         />
     <TableRow>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:textSize="8pt"
+            android:text="-1"
+            android:textColor="@color/transparent"
+            android:id="@+id/id_parcela"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -81,13 +90,7 @@
         android:layout_height="fill_parent"
         android:textSize="8pt"
         android:text="   pagas"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:textSize="8pt"
-        android:text="-1"
-        android:textColor="@color/transparent"
-        android:id="@+id/id_parcela"/>
+
     </TableRow>
 </TableLayout>
 </LinearLayout>
