--- a/app/src/main/res/layout/legenda.xml
+++ b/app/src/main/res/layout/legenda.xml
@@ -22,6 +22,8 @@
         android:id="@+id/status_legenda"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:textAlignment="gravity"
+        android:gravity="right"
         android:layout_weight="0.5"
         />
 
