--- a/app/src/main/res/layout/activity_configuracao.xml
+++ b/app/src/main/res/layout/activity_configuracao.xml
@@ -9,17 +9,17 @@
 <EditText
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:hint="Nome da Noiva"
+    android:hint="@string/NomedaNoiva"
     android:id="@+id/noivaNome"/>
   <EditText
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:hint="Nome do Noivo"
+        android:hint="@string/NomedoNoivo"
       android:id="@+id/noivoNome"/>
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Data do Casamento"
+        android:text="@string/datadocasamento"
         android:layout_margin="5dp"/>
 
     <DatePicker xmlns:android="http://schemas.android.com/apk/res/android"
