--- a/app/src/main/res/layout/financeiro.xml
+++ b/app/src/main/res/layout/financeiro.xml
@@ -33,7 +33,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
                     android:textSize="8pt"
-                    android:text="  vez(es)"/>
+                    android:text="@string/vezes"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
@@ -89,7 +89,7 @@
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:textSize="8pt"
-        android:text="   pagas"/>
+        android:text="@string/pagas"/>
 
     </TableRow>
 </TableLayout>
