--- a/app/src/main/res/layout/activity_add_debito.xml
+++ b/app/src/main/res/layout/activity_add_debito.xml
@@ -1,9 +1,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
+    xmlns:ads="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    >
+    android:paddingLeft="0dp"
+    android:paddingRight="0dp"
+    android:id="@+id/layoutdebito">
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
