--- a/app/src/main/res/layout/fragment_principal.xml
+++ b/app/src/main/res/layout/fragment_principal.xml
@@ -1,6 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:id="@+id/layoutlistaconv"
     android:layout_height="match_parent">
     <ListView
         android:layout_width="wrap_content"
