--- a/app/src/main/res/layout/fragment_financeiro.xml
+++ b/app/src/main/res/layout/fragment_financeiro.xml
@@ -18,6 +18,6 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="16dp"
         android:layout_alignParentRight="true"
-        fab:fab_colorNormal="@color/pink"/>
+        fab:fab_colorNormal="@color/random1"/>
 
 </RelativeLayout>
