--- a/app/src/main/res/layout/fragment_principal.xml
+++ b/app/src/main/res/layout/fragment_principal.xml
@@ -19,6 +19,6 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="16dp"
         android:layout_alignParentRight="true"
-        fab:fab_colorNormal="@color/pink"/>
+        fab:fab_colorNormal="@color/budgetColorGreenRingColor"/>
 
 </RelativeLayout>
