--- a/app/src/main/res/layout/fragment_time.xml
+++ b/app/src/main/res/layout/fragment_time.xml
@@ -13,6 +13,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/faltamhome"
+            android:textColor="@color/random1"
             android:textStyle="bold"
             android:textSize="40dp"/>
         </LinearLayout>
@@ -24,8 +25,9 @@
     android:gravity="center"   >
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:text="0"
+        android:textColor="@color/black"
         android:id="@+id/diasFaltam"
         android:textStyle="bold"
         android:textSize="80dp"/>
@@ -42,6 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:text="@string/diashome"
+        android:textColor="@color/black"
         android:textStyle="bold"
         android:textSize="20dp"
         />
@@ -57,6 +60,7 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:text="@string/frasehome"
+            android:textColor="@color/random1"
             android:textStyle="bold"
             android:textSize="30dp"/>
 
